--- a/config.org
+++ b/config.org
@@ -1,3 +1,9 @@
+* Minor Settings
+** Subword
+Traversing camelcase using meta key.
+#+begin_src emacs-lisp
+  (global-subword-mode 1)
+#+end_src
 * Terminal
 ** Setting default shell to bash
    #+begin_src emacs-lisp
