--- a/config.org
+++ b/config.org
@@ -4,6 +4,17 @@ Traversing camelcase using meta key.
 #+begin_src emacs-lisp
   (global-subword-mode 1)
 #+end_src
+** Electric Pair
+Adding closing parenthesis and else automatically.
+#+begin_src emacs-lisp
+  (setq electric-pair-pairs '((?\( . ?\))
+			      (?\[ . ?\])
+			      (?\" . ?\")
+			      (?\' . ?\')
+			      ))
+
+  (electric-pair-mode t)
+#+end_src
 * Terminal
 ** Setting default shell to bash
    #+begin_src emacs-lisp
