--- a/config.org
+++ b/config.org
@@ -22,6 +22,17 @@ Adding closing parenthesis and else automatically.
        (kill-word 1))
      (global-set-key (kbd "C-c w w") 'kill-whole-word)
    #+end_src
+** copy-whole-line
+   #+begin_src emacs-lisp
+     (defun copy-whole-line ()
+       (interactive)
+       (save-excursion
+	 (kill-new
+	  (buffer-substring
+	   (point-at-bol)
+	   (point-at-eol)))))
+     (global-set-key (kbd "C-c w l") 'copy-whole-line)
+   #+end_src
 ** Show line and column on the modeline
    #+begin_src emacs-lisp
      (line-number-mode 1)
