--- a/config.org
+++ b/config.org
@@ -4,6 +4,12 @@ Traversing camelcase using meta key.
 #+begin_src emacs-lisp
   (global-subword-mode 1)
 #+end_src
+** Clock
+   Display clock on mode line.
+   #+begin_src emacs-lisp
+     (setq display-time-24hr-format t)
+     (display-time-mode 1)
+   #+end_src
 ** Electric Pair
 Adding closing parenthesis and else automatically.
 #+begin_src emacs-lisp
