--- a/config.org
+++ b/config.org
@@ -64,6 +64,11 @@ Open ==C-c '== in the same window.
 #+begin_src emacs-lisp
   (setq org-src-window-setup 'current-window)
 #+end_src
+Set shortcut to write emacs-lisp in org-mode.
+#+begin_src emacs-lisp
+  (add-to-list 'org-structure-template-alist
+		 '("el" . "src emacs-lisp"))
+#+end_src
 ** Org Bullets
    #+begin_src emacs-lisp
      (use-package org-bullets
