--- a/config.org
+++ b/config.org
@@ -273,3 +273,11 @@ Change cursor position when splitting window
     (other-window 1))
   (global-set-key (kbd "C-x 3") 'split-and-follow-vertically)
 #+end_src
+* Autocomplete
+** Company
+   #+begin_src emacs-lisp
+     (use-package company
+       :ensure t
+       :init
+       (add-hook 'after-init-hook 'global-company-mode))
+   #+end_src
